[package]
name = "data_logger"
version = "0.1.0"
authors = ["Klas <klasafgeijerstam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
serde_json = "1"
